<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. - Groupe 1PACT 42 - Projet HALTarot
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFA111"
    tools:context="fr.telecom_paristech.pact42.tarot.tarotplayer.Activities.DifficultyActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:background="#63D00C"
        android:gravity="center"
        android:text="@string/difficultyTitle"
        android:textColor="#FFFFFF"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/difficulty1"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF"
        android:text="@string/difficulty1"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/difficulty2"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF"
        android:text="@string/difficulty2"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty1" />

    <Button
        android:id="@+id/difficulty3"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF"
        android:text="@string/difficulty3"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty2" />

</android.support.constraint.ConstraintLayout>
