<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#63D00C"
        android:gravity="center_vertical"
        android:text="@string/popupEncheresTitle"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:textStyle="bold" />
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/enchereImage1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/smiley1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:tag="@string/enchereText1"/>
        <TextView
            android:id="@+id/enchereText1"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/enchereText1"
            android:textColor="#000000"
            android:textSize="10dp"
            android:textStyle="bold"
            android:layout_below="@id/enchereImage1"/>

        <ImageView
            android:id="@+id/enchereImage2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@id/enchereImage1"
            android:src="@drawable/smiley2"
            android:tag="@string/enchereText2"/>
        <TextView
            android:id="@+id/enchereText2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/enchereText2"
            android:textColor="#000000"
            android:textSize="10dp"
            android:textStyle="bold"
            android:layout_below="@id/enchereImage2"
            android:layout_toRightOf="@id/enchereText1"
            android:layout_marginLeft="10dip"/>
        <ImageView
            android:id="@+id/enchereImage3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/smiley3"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/enchereImage2"
            android:layout_marginLeft="10dip"
            android:tag="@string/enchereText3"/>
        <TextView
            android:id="@+id/enchereText3"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/enchereText3"
            android:textColor="#000000"
            android:textSize="10dp"
            android:textStyle="bold"
            android:layout_below="@id/enchereImage3"
            android:layout_toRightOf="@id/enchereText2"
            android:layout_marginLeft="10dip"/>
        <ImageView
            android:id="@+id/enchereImage4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/smiley4"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/enchereImage3"
            android:layout_marginLeft="10dip"
            android:tag="@string/enchereText4"/>
        <TextView
            android:id="@+id/enchereText4"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/enchereText4"
            android:textColor="#000000"
            android:textSize="10dp"
            android:textStyle="bold"
            android:layout_below="@id/enchereImage4"
            android:layout_toRightOf="@id/enchereText3"
            android:layout_marginLeft="10dip"/>

        <ImageView
            android:id="@+id/enchereImage5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/smiley5"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/enchereImage4"
            android:layout_marginLeft="10dip"
            android:tag="@string/enchereText5"/>
        <TextView
            android:id="@+id/enchereText5"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/enchereText5"
            android:textColor="#000000"
            android:textSize="10dp"
            android:textStyle="bold"
            android:layout_below="@id/enchereImage5"
            android:layout_toRightOf="@id/enchereText4"
            android:layout_marginLeft="10dip"/>

        <ImageView
            android:id="@+id/enchereImage6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/smiley6"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/enchereImage5"
            android:layout_marginLeft="10dip"
            android:tag="@string/enchereText6"/>
        <TextView
            android:id="@+id/enchereText6"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/enchereText6"
            android:textColor="#000000"
            android:textSize="10dp"
            android:textStyle="bold"
            android:layout_below="@id/enchereImage6"
            android:layout_toRightOf="@id/enchereText5"
            android:layout_marginLeft="10dip"/>


    </RelativeLayout>

</LinearLayout>
