<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B86DF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fr.telecom_paristech.pact42.tarot.tarotplayer.Activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="300dp"
        android:layout_height="136dp"
        android:text="@string/mainTitle"
        android:textColor="#FFFFFF"
        android:textSize="70dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164" />

    <Button
        android:id="@+id/mainButtonPlay"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:background="#FFA111"
        android:text="@string/mainButtonPlay"
        android:textSize="60dp"
        android:textStyle="bold"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

    <TextView
        android:layout_width="106dp"
        android:layout_height="27dp"
        android:text="@string/version"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974" />

</android.support.constraint.ConstraintLayout>
